# Memora

./: .gitignore  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json  vite.config.ts
python/: caption_engine.py  clip_engine.py  cluster_engine.py  database.py  exif_engine.py  face_engine.py  hardware.py  main.py  memora_sidecar.spec  models.py  requirements-gpu.txt  requirements.txt  scanner.py  sidecar_entry.py  vector_store.py
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  sidecar.rs
src/api/: client.ts
src/components/GalleryTab/: GalleryTab.tsx
src/components/PeopleTab/: PeopleTab.tsx
src/components/SearchTab/: SearchTab.tsx
src/components/SettingsTab/: SettingsTab.tsx
