[package]
name = "memora"
version = "0.1.0"
description = "Privacy-First AI Media Manager"
authors = ["Memora"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77"

[lib]
name = "memora_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "memora"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
portpicker = "0.1"
log = "0.4"
env_logger = "0.11"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
